implemented function decl parsing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ project ("mocha-lang")
 
 # Add source to this project's executable.
 add_executable (mocha-lang "mocha-lang.cpp" "mocha-lang.h"   "src/Lexer.cpp"  "src/Lexer.h" "src/utils/TokenStream.h" "src/utils/Token.h" "src/Parser.h" "src/utils/Statements.h" "src/Statements.cpp" "src/Parser.cpp" "src/output/StatementTreePrinter.h")
+target_compile_features(mocha-lang PRIVATE cxx_std_17)
 
 # TODO: Add tests and install targets if needed.
